<resources>
    <string name="app_name">Gymtracker</string>
    <string name="home">Home</string>
    <string name="history">Verlauf</string>
    <string name="stats">Statistik</string>
    <string name="startEmptyWorkout">Leeres Workout starten</string>
    <string name="addExercise">Übung hinzufügen</string>
    <string name="addExerciseToTemplate">Übung hinzufügen</string>
    <string name="renameTemplate">Vorlage umbenennen</string>
    <string name="saveTemplate">Vorlage speichern</string>
    <string name="createNewExercise">Neue Übung erstellen</string>
    <string name="createNewExerciseText">Den Namen der neuen Übung eingeben:</string>
    <string name="addNewTemplate">Neue Vorlage erstellen</string>
    <string name="repetitionsFull">Wiederholungen</string>
    <string name="newExercise">Neue Übung</string>
    <string name="exerciseAlreadyExists">Diese Übung gibt es bereits. Sie wurde nicht hinzugefügt.</string>
    <string name="newTemplate">Neue Vorlage</string>
    <string name="templates">Vorlagen</string>
    <string name="addNewExerciseText">Den Namen der neuen Übung eingeben:</string>
    <string name="addNewTemplateText">Den Namen der neuen Vorlage eingeben:</string>
    <string name="removeExercise">Übung entfernen</string>
    <string name="removeExerciseText">Diese Übung aus dem aktuellen Workout entfernen?</string>
    <string name="exercise">Übung</string>
    <string-array name="exercises">
        <item>Bankdrücken</item>
        <item>Schrägbankdrücken</item>
        <item>Butterfly</item>
        <item>Schulterdrücken (KH)</item>
        <item>Schulterdrücken (MP)</item>
        <item>Seitheben (KH)</item>
        <item>Seitheben (Maschine)</item>
        <item>Trizeps-Pulldown</item>
        <item>Trizeps (Maschine)</item>
        <item>Dips</item>
        <item>Latzug</item>
        <item>Klimmzüge</item>
        <item>Klimmzug (Maschine)</item>
        <item>Rudern (eng)</item>
        <item>Rudern (breit)</item>
        <item>Butterfly Reverse</item>
        <item>Hammercurls</item>
        <item>Bizepscurls (LH)</item>
        <item>Beinpresse</item>
        <item>Lunges</item>
        <item>Leg Curls</item>
        <item>Leg Extensions</item>
        <item>Waden (KH)</item>
        <item>Waden (MP)</item>
        <item>Waden (Maschine)</item>
        <item>Adduktoren</item>
        <item>Abduktoren</item>
        <item>Hip Thrust</item>
        <item>Crunches</item>
        <item>Plank</item>
        <item>Sit Ups (Maschine)</item>
        <item>Rotator</item>
        <item>Back Extensions</item>
    </string-array>
    <string name="bestSet">Bestes Set</string>
    <string name="remove">entfernen</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="addSet">Set hinzufügen</string>
    <string name="search">🔎 Suchen</string>
    <string name="min">min</string>
    <string name="quitWorkout">Workout abbrechen</string>
    <string name="quitWorkoutText">Soll das Workout wirklich ohne zu speichern beendet werden?</string>
    <string name="saveWorkoutText">Workout beenden und speichern?</string>
    <string name="saveWorkout">Workout speichern &amp; beenden</string>
    <string name="set">Set</string>
    <string name="sets">Sets</string>
    <string name="last">Vorheriges</string>
    <string name="KG">KG</string>
    <string name="changeWorkoutName">Workoutnamen ändern</string>
    <string name="moveExerciseUp">Übung nach oben verschieben</string>
    <string name="moveExerciseDown">Übung nach unten verschieben</string>
    <string name="replaceExercise">Übung ersetzen</string>
    <string name="replaceExerciseThrough">Übung ersetzen durch</string>
    <string name="cantRemoveLastSet">Das letzte Set kann nicht entfernt werden.</string>
    <string name="editTemplates">Vorlagen bearbeiten</string>
    <string name="editTemplate">Vorlage bearbeiten</string>
    <string name="deleteLastSet">Letztes Set löschen</string>
    <string name="editExercises">Übungen bearbeiten</string>
    <string name="workoutChangeName">Namen des Workouts ändern</string>
    <string name="workoutChangeNameEnterName">Den neuen Namen eingeben:</string>
    <string name="reps.">Wiederh.</string>
    <string name="reps..">Wdhl.</string>
    <string name="deleteExercise">Übung löschen</string>
    <string name="deleteExerciseText">Soll diese Übung wirklich gelöscht werden? Sie wird ebenfalls aus dem Verlauf und allen Statistiken gelöscht. Diese Aktion kann NICHT rückgängig gemacht werden.</string>
    <string name="renameExercise">Übung umbenennen</string>
    <string name="exportData">Verlaufsdaten exportieren</string>
    <string name="importData">Verlaufsdaten importieren</string>
    <string name="addToTemplate">Übung</string>
    <string name="ok">OK</string>
    <string name="chooseExercise">Übung auswählen</string>
    <string name="restoreWorkout">Letztes Workout wiederherstellen</string>
    <string name="emptyLastSet">-</string>
    <string name="cancel">Abbrechen</string>
    <string name="prweight">Persönlicher Rekord (Gewicht):</string>
    <string name="doublePressToExit">Drücke die Zurücktaste erneut, um die App zu schließen.</string>
    <string name="doublePressToExitAddTemplate">Drücke die Zurücktaste erneut, um die Erstellung abzubrechen.</string>
    <string name="delete">löschen</string>
    <string name="prvolume">Persönlicher Rekord (Volumen):</string>
    <string name="totalWeight">Gesamtgewicht:</string>
    <string name="workoutCount">Anzahl durchgeführter Workouts:</string>
    <string name="workoutSumDuration">Gesamtdauer aller Workouts:</string>
    <string name="totalWeightSum">Gesamtgewicht aller Workouts:</string>
    <string name="defaultStatistik">Allgemeine Statistiken</string>
    <string name="mergeExercises">Übungen zusmamenführen</string>
    <string name="mergeExercisesText">Die neu eingegebene Übung exisitiert bereits. Sollen beide Übungen unter dem neuen Namen zusammengefasst werden? Diese Aktion kann NICHT rückgängig gemacht werden.</string>
    <string name="defaultWorkoutName">Standard Workout</string>
    <string name="toastCannotSaveEmptyWorkout">Schließe ein Set ab, bevor du das Workout speicherst.</string>
    <string name="toastDoubleExercise">Diese Übung existiert bereits.</string>
    <string name="toastDoubleTemplate">Diese Vorlage exisitert bereits.</string>
    <string name="toastNeverDoneExercise">Keine Details - diese Übung wurde noch nie durchgeführt.</string>
    <string name="toastTemplateAlreadyExists">Diese Vorlage existiert bereits.</string>
    <string name="toastTemplateIsEmpty">Füge der Vorlage erst eine Übung hinzu.</string>
    <string name="toastTemplateNameIsEmpty">Gib einen Namen für die Vorlage ein.</string>
    <string name="toastNoRepsDone">Erst Wiederholungen eintragen.</string>
    <string name="toastExerciseAlreadyUp">Übung ist bereits an erster Stelle.</string>
    <string name="toastExerciseAlreadyDown">Übung ist bereits an letzter Stelle.</string>
    <string name="toastFinishPreviousSetFirst">Zuerst das vorherige Set abschließen.</string>
    <string name="changeExerciseName">Übungsnamen ändern</string>
    <string name="changeExerciseNameText">Falls eine Übung eingegeben wird, die bereits existiert, werden die Statistiken der beiden Übungen unter dem neuen Namen zusammengefasst werden. Diese Aktion kann NICHT rückgängig gemacht werden. Ansonsten wird nur die Übung umbennant.</string>
    <string name="statsForExercise">Statistiken für bestimmte Übung</string>
    <string name="day">Tag</string>
    <string name="days">Tage</string>
    <string name="hour">Stunde</string>
    <string name="hours">Stunden</string>
    <string name="h">h</string>
    <string name="d">d</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minuten</string>
    <string name="deleteWorkout">Workout löschen</string>
    <string name="deleteTemplate">Vorlage löschen</string>
    <string name="deleteWorkoutText">Soll dieses Workout wirklich aus dem Verlauf gelöscht werden? Es wird in keiner Statistik mehr auftauchen. Diese Aktion kann NICHT rückgängig gemacht werden.</string>
    <string name="refresh">Aktualisieren</string>
    <string name="deleteTemplateText">Soll dieses Template wirklich gelöscht werden?</string>
    <string name="notificationTitle">Laufendes Workout</string>
    <string name="notificationText">Speichere oder lösche das Workout, um zu beenden.</string>
    <string name="savedWorkoutKey">SAVED_WORKOUT_KEY</string>
    <string name="savedStartTime">SAVED_START_TIME_KEY</string>
    <string name="savedPauseTime">SAVED_PAUSE_TIME_KEY</string>
    <string name="newExerciseCreated">Neue Übung erstellt</string>
    <string name="nameChanged">Namen geändert.</string>
    <string name="exerciseDeleted">Übung gelöscht</string>
    <string name="exerciseRenamed">Übung umbenannt</string>
    <string name="exercisesMerged">Übungen zusammengeführt</string>
    <string name="exerciseRemoved">Übung entfernt</string>
    <string name="templateDeleted">Vorlage gelöscht</string>
    <string name="cantRemoveLastExercise">Die letzte Übung kann nicht entfernt werden. Löschen Sie stattdessen die Vorlage.</string>
    <string name="exerciseAdded">Übung hinzugefügt</string>
    <string name="changeTemplateName">Vorlagennamen ändern</string>
    <string name="changeTemplateNameText">Den neuen Namen für die Vorlage eingeben:</string>
    <string name="templateRenamed">Vorlage umbennant</string>
    <string name="nothingLeftToAdd">Es ist nichts mehr zum hinzufügen übrig.</string>
    <string name="toBeImplemented">To be implemented</string>
    <string name="averageDailyTrainingTime">Durchschnittliche tägliche Trainingszeit</string>
    <string name="statsFor">Statistiken für</string>
    <string name="inTheLast">in den letzten</string>
    <string name="showForLast">Zeige Daten für die letzten</string>
    <string name="days.">Tagen.</string>
    <string name="daysPlural">Tagen</string>
    <string name="day.">Tage.</string>
    <string name="daysToAverageOverDefault">7</string>
    <string name="daysToShowDefault">30</string>
    <string name="trainingTimeInMinutes">Trainingszeit in Minuten:</string>
    <string name="volume">Gesamtvolumen</string>
    <string name="volumeAndMaxWeight">Volumen und Maximalgewicht</string>
    <string name="ofFirst">der ersten</string>
    <string name="SetsInKG">Sätze in KG:</string>
    <string name="ofFirst3Sets">der ersten 3 Sätze</string>
    <string name="volumeOfFirst3Sets">Volumen der ersten 3 Sätze</string>
    <string name="maxWeight">Maximalgewicht</string>
    <string name="andMaxWeightInKG">und Maximalgewicht in KG:</string>
    <string name="loadMoreHistory">10 weitere Einträge laden</string>
    <string name="everythingLoaded">Bereits alles geladen</string>
    <string name="detailView">Detailansicht</string>
    <string name="exerciseHistory">Übungsverlauf:</string>
    <string name="lastDoneDays">Zuletzt vor</string>
    <string name="importDataText">Durch Auswahl von OK werden die aktuellen Verlaufdaten inklusive Vorlagen und Übungen durch die Verlaufsdaten in der Datei ersetzt. Dieser Vorgang kann NICHT rückgängig gemacht werden.</string>
    <string name="addNote">Notiz hinzufügen</string>
    <string name="showStats">Statistiken zeigen</string>
    <string name="activateTimer">Timer aktivieren</string>
    <string name="startTimer">Timer starten</string>
    <string name="autoStartTimer">Timer nach Speichern eines Sets starten:</string>
    <string name="timerDuration">Dauer des Timers (Sekunden):</string>
    <string name="settings">Einstellungen</string>
    <string name="playSound10">Sound bei 10 Sekunden:</string>
    <string name="playSound3">Sound bei 3 Sekunden:</string>
    <string name="save">Speichern</string>
    <string name="vibrateAt3">Vibration bei 3 Sekunden:</string>
    <string name="vibrateAt10">Vibration bei 10 Sekunden:</string>
</resources>