<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/move_exercise_up_menu"
        android:title="@string/moveExerciseUp" />

    <item
        android:id="@+id/move_exercise_down_menu"
        android:title="@string/moveExerciseDown" />

    <item
        android:id="@+id/remove_exercise_menu"
        android:title="@string/removeExercise" />

    <item
        android:id="@+id/replace_exercise_menu"
        android:title="@string/replaceExercise" />

    <item
        android:id="@+id/delete_last_set_menu"
        android:title="@string/deleteLastSet" />

    <item
        android:id="@+id/add_exercise_note_menu"
        android:title="@string/addNote" />

    <item
        android:id="@+id/show_stats_menu"
        android:title="@string/showStats" />

</menu>