<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/timer_start_add10_menu"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/startTimer"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/timer_activate_deactivate_menu"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/activateTimer"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/save_workout_menu"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/saveWorkout"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/quit_workout_menu"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/quitWorkout"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/change_workout_name"
        android:title="@string/changeWorkoutName"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_new_exercise_menu_workout"
        android:title="@string/createNewExercise"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings_menu_workout"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>