<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerDuration"
                android:layout_gravity="center">
            </TextView>
            <EditText
                android:id="@+id/duration_timer_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="123"
                android:maxLength="3"
                android:inputType="number">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoStartTimer"
                android:layout_gravity="center">
            </TextView>
            <CheckBox
                android:id="@+id/auto_start_timer_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playSound10"
                android:layout_gravity="center">
            </TextView>
            <CheckBox
                android:id="@+id/timer_10_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playSound3"
                android:layout_gravity="center">
            </TextView>
            <CheckBox
                android:id="@+id/timer_3_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrateAt10"
                android:layout_gravity="center">
            </TextView>
            <CheckBox
                android:id="@+id/timer_vibrate_at_10_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrateAt3"
                android:layout_gravity="center">
            </TextView>
            <CheckBox
                android:id="@+id/timer_vibrate_at_3_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
            </CheckBox>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/boarder_size"
            android:background="@color/boarders"/>

        <Button
            android:id="@+id/save_settings_button"
            android:layout_height="@dimen/large_button_height"
            android:text="@string/save"
            style="@style/largeButton"/>


    </LinearLayout>


</FrameLayout>